# Venom_VNV

./: .dockerignore  .gitignore  .gitmodules  Makefile  README.md  README_EN.md  docker-compose.yml  mkdocs.yml  requirements-docs.txt
.github/workflows/: build.yml  pages.yml
docker/: Dockerfile.sim  entrypoint.sh
docs/: _config.yml  chassis_can_setup.md  chassis_driver.md  fast_lio.md  index.md  interface_reference.md  launch_usage.md  lidar_setup.md  lio_overview.md  point_lio.md  point_lio_handoff_2026-04-16.md  px4_bridge_handoff_2026-04-17.md  quick_start.md  rc_local.md  search.json  setup.md  style.css  tf_tree.md  topics.md
docs/_data/: navigation.yml  navigation_en.yml
docs/_includes/: sidebar.html
docs/_layouts/: default.html
docs/assets/stylesheets/: extra.css
docs/deployment/: chassis_can_setup.md  environment.md  lidar_setup.md  piper_can_setup.md  rc_local.md  realsense_setup.md  run_modes.md  system_overview.md
docs/en/: index.md  search.json
docs/en/deployment/: chassis_can_setup.md  environment.md  lidar_setup.md  piper_can_setup.md  rc_local.md  realsense_setup.md  run_modes.md  system_overview.md
docs/en/home/: index.md  launch_usage.md  quick_start.md
docs/en/modules/: architecture.md  index.md  interface_reference.md
docs/en/support/: application_scenarios.md  contact.md  contributing.md  development.md  faq.md  migration_notes.md  troubleshooting.md
docs/home/: index.md  launch_usage.md  quick_start.md
docs/modules/: architecture.md  index.md  interface_reference.md
docs/modules/auto_aim/: armor_detector.md  armor_tracker.md  index.md
docs/modules/drivers/: chassis_driver.md  hunter_ros2.md  index.md  livox_ros_driver2.md  piper_ros.md  ros2_hik_camera.md  scout_ros2.md  ugv_sdk.md  venom_px4_bridge.md  (+1 more)
docs/support/: application_scenarios.md  contact.md  contributing.md  development.md  faq.md  migration_notes.md  troubleshooting.md
driver/ros2_hik_camera/: README.md  package.xml
perception/zbar_interfaces/: CMakeLists.txt  package.xml
perception/zbar_ros/: CMakeLists.txt  README.md  package.xml
perception/zbar_ros/include/zbar_ros/: barcode_reader_node.hpp
perception/zbar_ros/launch/: dataset_barcode.launch.py  zbar_ros.launch.py
perception/zbar_ros/src/: barcode_reader_node.cpp  dataset_image_publisher.cpp
scripts/: ci-colcon-build.sh
venom_bringup/: package.xml  setup.py
venom_bringup/config/: ekf_scout.yaml  mapper_params_sync.yaml  sentry_imu.yaml
venom_bringup/config/autoaim/: launch_params.yaml  node_params.yaml
venom_bringup/config/examples/: MID360_config.json  point_lio_mapping.yaml  point_lio_offline_map.yaml  point_lio_online_async_map.yaml  point_lio_online_odom.yaml
venom_bringup/config/scout_mini/: MID360_config.json  nav2_params.yaml  point_lio_mapping.yaml  waypoints.yaml
venom_bringup/launch/: autoaim_nav_bringup.launch.py  autoaim_stack.launch.py  autoaim_test_bringup.launch.py  imu_odom_bringup.launch.py  mapping_bringup.launch.py  mapping_sync_bringup.launch.py  relocalization_bringup.launch.py  scout_mini_robot_bringup.launch.py  sentry_robot_bringup.launch.py
venom_bringup/launch/auto_aim/: detector_only.launch.py
venom_bringup/launch/examples/: mid360_point_lio.launch.py  mid360_point_lio_async_map.launch.py  mid360_point_lio_odom.launch.py  mid360_point_lio_offline_map.launch.py  mid360_record_raw.launch.py  mid360_rviz.launch.py  px4_vps_bridge.launch.py
venom_bringup/launch/scout_mini/: scout_mini_mapping.launch.py
venom_bringup/rviz_cfg/: mapping.rviz  relocalization.rviz  robot.rviz
venom_bringup/venom_bringup/: imu_odom_publisher.py  multi_waypoint_commander.py
venom_robot_description/config/: infantry.yaml
venom_robot_description/urdf/: rm_gimbal.urdf.xacro
(+65 files in other folders)
